teeda-html-example/src/main/java/examples/teeda/web/error/ErrorPage.java
package examples.teeda.web.error;


public class ErrorPage {

	public String doHoge() {
		throw new WebAppRuntimeException();
	}
}
